# slergbot

./: Cargo.toml  Containerfile  Dockerfile  README.Docker.md  README.md  compose.yaml
src/: jshell.rs  main.rs
